--- a/public/Markup/package.json
+++ b/public/Markup/package.json
@@ -15,6 +15,7 @@
     "gulp-changed": "^4.0.2",
     "gulp-if": "^3.0.0",
     "gulp-include": "^2.4.1",
+    "gulp-minify": "^3.1.0",
     "gulp-nunjucks-render": "^2.2.3",
     "gulp-sass": "^4.1.0",
     "vue": "^2.6.11"
@@ -27,6 +28,8 @@
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.2.2",
     "gulp": "^4.0.2",
+    "gulp-uglify": "^3.0.2",
+    "readable-stream": "^2.3.7",
     "vue-template-compiler": "^2.6.11"
   }
 }
