Ключ STRIPE API перенесен в файл конфигурации

--- a/.env
+++ b/.env
@@ -14,13 +14,16 @@
 # https://symfony.com/doc/current/best_practices.html#use-environment-variables-for-infrastructure-configuration
 
 ###> symfony/framework-bundle ###
-APP_ENV=prod
+APP_ENV=dev
 APP_SECRET=1787af09dfefd7d4b877f0ce5e478879
 ###< symfony/framework-bundle ###
-
 ###> symfony/mailer ###
 # MAILER_DSN=smtp://localhost
 ###< symfony/mailer ###
+
+###< stripe ###
+STRIPE_KEY="sk_test_4eC39HqLyjWDarjtT1zdp7dc"
+###< stripe ###
 
 ###> doctrine/doctrine-bundle ###
 # Format described at https://www.doctrine-project.org/projects/doctrine-dbal/en/latest/reference/configuration.html#connecting-using-a-url
