Интеграция платежного шлюза PayPal

--- a/.env
+++ b/.env
@@ -25,6 +25,11 @@ APP_SECRET=1787af09dfefd7d4b877f0ce5e478879
 STRIPE_KEY="sk_test_4eC39HqLyjWDarjtT1zdp7dc"
 ###< stripe ###
 
+###< paypal ###
+PAYPAL_CLIENT=""
+PAYPAL_SECRET=""
+###< paypal ###
+
 ###> doctrine/doctrine-bundle ###
 # Format described at https://www.doctrine-project.org/projects/doctrine-dbal/en/latest/reference/configuration.html#connecting-using-a-url
 # IMPORTANT: You MUST configure your server version, either here or in config/packages/doctrine.yaml
