--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,8 @@
         "doctrine/doctrine-migrations-bundle": "^3.0",
         "doctrine/orm": "^2.8",
         "easycorp/easyadmin-bundle": "^3.2",
+        "paypal/paypal-checkout-sdk": "^1.0",
+        "paypal/paypalhttp": "^1.0",
         "phpdocumentor/reflection-docblock": "^5.2",
         "sensio/framework-extra-bundle": "^5.1",
         "symfony/asset": "5.2.*",
